dark mode bug fixed

--- a/src/cssFile/country.css
+++ b/src/cssFile/country.css
@@ -1,6 +1,6 @@
-.main-country-detail-container{
+/* .main-country-detail-container{
     height: calc(100vh - 72px);
-}
+} */
 .country-details-container {
     max-width: 1200px;
     margin-inline: auto;
@@ -20,6 +20,7 @@
     align-items: center;
     gap: 64px;
     margin-top: 64px;
+    padding-bottom: 100px;
 }
 
 .country-details img {
@@ -61,6 +62,7 @@
         align-items: flex-start;
         margin-top: 32px;
         gap: 16px;
+        padding-inline: 40px;
     }
 
     .details-text {
